--- a/photopicklib/src/main/res/layout/act_picker.xml
+++ b/photopicklib/src/main/res/layout/act_picker.xml
@@ -1,16 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <include layout="@layout/picker_toolbar" />
+    <include layout="@layout/picker_toolbar"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcy_picker"
+        android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="#aa000000"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_dir"
+            style="@style/Widget.AppCompat.ActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textColor="@android:color/white"
+            android:drawableRight="@drawable/text_indicator"
+            android:drawablePadding="4dp"
+            android:text="所有图片"/>
+    </LinearLayout>
+</RelativeLayout>
