--- a/photopicklib/src/main/res/layout/item_photo.xml
+++ b/photopicklib/src/main/res/layout/item_photo.xml
@@ -32,6 +32,6 @@
         android:layout_alignParentTop="true"
         android:layout_marginRight="2dp"
         android:layout_marginTop="2dp"
-        android:background="@drawable/photo_unselected"/>
+        android:background="@drawable/img_unselect"/>
 
 </RelativeLayout>
