--- a/app/src/main/res/values-v21/style.xml
+++ b/app/src/main/res/values-v21/style.xml
@@ -6,6 +6,7 @@
 
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
+        <item name="android:colorControlNormal">@android:color/white</item>
 
         <!--<item name="actionOverflowMenuStyle">@style/OverflowMenu</item>-->
     </style>
