修改选中图标

--- a/photopicklib/src/main/res/layout/act_pic_pager.xml
+++ b/photopicklib/src/main/res/layout/act_pic_pager.xml
@@ -3,12 +3,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#dd000000"
+    android:background="@color/bg_pager"
     android:orientation="vertical">
 
     <com.zero.photopicklib.widget.PinchImageViewPager
         android:id="@+id/vp_pic_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <android.support.v7.widget.Toolbar
+        android:id="@id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:layout_alignParentTop="true"
+        android:fitsSystemWindows="true"
+        android:background="@android:color/transparent"/>
 
 </RelativeLayout>
