--- a/photopicklib/src/main/res/values/colors.xml
+++ b/photopicklib/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="bg_pager">#dd000000</color>
+    <color name="bg_dir">#99000000</color>
 </resources>
