--- a/photopicklib/src/main/res/drawable/img_select.xml
+++ b/photopicklib/src/main/res/drawable/img_select.xml
@@ -4,11 +4,8 @@
         android:viewportHeight="24.0"
         android:viewportWidth="24.0">
     <path
-        android:strokeColor="@android:color/white"
-        android:strokeWidth="1"
-        android:fillColor="#88000000"
         android:pathData="M0 0h24v24H0z"/>
     <path
         android:fillColor="#00FF00"
-        android:pathData="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/>
+        android:pathData="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
 </vector>
