--- a/photopicklib/src/main/res/drawable/img_unselect.xml
+++ b/photopicklib/src/main/res/drawable/img_unselect.xml
@@ -4,8 +4,7 @@
         android:viewportHeight="24.0"
         android:viewportWidth="24.0">
     <path
-        android:strokeColor="@android:color/white"
-        android:strokeWidth="1"
-        android:fillColor="#88000000"
-        android:pathData="M0 0h24v24H0z"/>
+        android:fillColor="#FFFFFFFF"
+        android:pathData="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"/>
+    <path android:pathData="M0 0h24v24H0z"/>
 </vector>
