--- a/photopicklib/src/main/res/layout/item_dir.xml
+++ b/photopicklib/src/main/res/layout/item_dir.xml
@@ -1,32 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:padding="10dp"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:padding="@dimen/dimen_10"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/iv_dir_cover"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginRight="10dip"
+        android:id="@id/iv_dir_cover"
+        android:layout_width="@dimen/photo_size"
+        android:layout_height="@dimen/photo_size"
+        android:layout_marginRight="@dimen/dimen_10"
         android:scaleType="centerCrop"/>
+
+    <ImageView
+        android:id="@id/iv_dir_sel"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/dir_select"
+        android:visibility="invisible"
+        android:layout_centerVertical="true"
+        android:layout_width="@dimen/dimen_24"
+        android:layout_height="@dimen/dimen_24"/>
 
     <LinearLayout
         android:gravity="center"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_gravity="center"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@id/iv_dir_cover"
+        android:layout_toLeftOf="@id/iv_dir_sel"
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tv_dir_name"
+            android:id="@id/tv_dir_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <TextView
-            android:id="@+id/tv_dir_count"
+            android:id="@id/tv_dir_count"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
