--- a/photopicklib/src/main/res/layout/item_photo.xml
+++ b/photopicklib/src/main/res/layout/item_photo.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="2dp">
+                android:padding="@dimen/dimen_1">
 
     <ImageView
         android:id="@id/photo_thumbview"
@@ -11,27 +11,14 @@
         android:layout_gravity="center"
         android:scaleType="centerCrop"/>
 
-    <TextView
-        android:id="@id/photo_thumbview_position"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:background="#bb000000"
-        android:gravity="center"
-        android:text="1"
-        android:textColor="@android:color/white"
-        android:textSize="32dp"
-        android:textStyle="bold"
-        android:visibility="gone"/>
-
     <ImageView
         android:id="@id/photo_thumbview_selected"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="@dimen/sel_img_size"
+        android:layout_height="@dimen/sel_img_size"
+        android:padding="@dimen/dimen_4"
+        android:scaleType="center"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="2dp"
-        android:layout_marginTop="2dp"
-        android:background="@drawable/img_unselect"/>
+        android:src="@drawable/img_unselect"/>
 
 </RelativeLayout>
