--- a/photopicklib/src/main/res/layout/picker_toolbar.xml
+++ b/photopicklib/src/main/res/layout/picker_toolbar.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar
-    android:id="@+id/toolbar"
+    android:id="@id/toolbar"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="@color/colorPrimary" >
 
     <TextView
-        android:id="@+id/toolbar_title"
+        android:id="@id/toolbar_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
