--- a/photopicklib/src/main/res/values/dimens.xml
+++ b/photopicklib/src/main/res/values/dimens.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="item_directory_height">80dp</dimen>
+
+    <dimen name="dimen_1">1dp</dimen>
+    <dimen name="dimen_2">2dp</dimen>
+    <dimen name="dimen_4">4dp</dimen>
+    <dimen name="dimen_10">10dp</dimen>
+    <dimen name="dimen_12">12dp</dimen>
+    <dimen name="dimen_24">24dp</dimen>
+
+    <dimen name="dir_height">48dp</dimen>
+    <dimen name="sel_img_size">32dp</dimen>
+    <dimen name="photo_size">64dp</dimen>
 </resources>
