--- a/photopicklib/src/main/res/layout/act_pic_pager.xml
+++ b/photopicklib/src/main/res/layout/act_pic_pager.xml
@@ -14,7 +14,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:fitsSystemWindows="true"
         android:background="@android:color/transparent"/>
