--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,17 +2,24 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="88dp"
     tools:context="com.zero.photopick.MainActivity">
 
     <Button
         android:layout_width="match_parent"
         android:onClick="tiaozhuan"
-        android:layout_height="match_parent"
-        android:text="跳转"/>
+        android:layout_height="wrap_content"
+        android:text="选择后不压缩"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:onClick="tiaocompress"
+        android:layout_height="wrap_content"
+        android:text="选择后压缩"/>
 </LinearLayout>
