--- a/app/src/main/res/values-v21/style.xml
+++ b/app/src/main/res/values-v21/style.xml
@@ -1,12 +1,9 @@
 <resources>
     <style name="AppTheme" parent="BaseAppTheme">
-        <!--<item name="android:windowTranslucentStatus">true</item>-->
-        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowTranslucentStatus">true</item>
 
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
-        <item name="android:colorControlNormal">@android:color/white</item>
 
         <!--<item name="actionOverflowMenuStyle">@style/OverflowMenu</item>-->
     </style>
