--- a/photopicklib/src/main/res/layout/picker_toolbar.xml
+++ b/photopicklib/src/main/res/layout/picker_toolbar.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zero.photopicklib.widget.CompatToolbar
-    android:id="@id/toolbar"
+<android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/colorPrimary" >
+    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
     <TextView
         android:id="@id/toolbar_title"
@@ -14,4 +16,4 @@
         style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
         android:layout_gravity="center" />
 
-</com.zero.photopicklib.widget.CompatToolbar>
+</android.support.v7.widget.Toolbar>
